      consensus. Fixes bug 529.
    - Fix awful behavior in DownloadExtraInfo option where we'd fetch
      extrainfo documents and then discard them immediately for not
      matching the latest router.

  o Minor features (v3 directory protocol):
    - Allow tor-gencert to generate a new certificate without replacing the
      signing key.
    - Allow certificates to include an address.

  o Minor features (router descriptor cache):
    - If we find a cached-routers file that's been sitting around for more
      than 28 days unmodified, then most likely it's a leftover from when we
      upgraded to 0.2.0.8-alpha.  Remove it.  It has no good routers anyway.
    - When we (as a cache) download a descriptor because it was listed in a
      consensus, remember when the consensus was supposed to expire, and
      don't expire the descriptor until then.

  o Minor features (performance):
    - Call routerlist_remove_old_routers() much less often.  This should
      speed startup, especially on directory caches.
    - Don't try to launch descriptor downloads quite so often when we
      have enough directory information.

  o Minor features (compilation):
    - Detect non-ASCII platforms (if any still exist) and refuse to
      build there.  Some of our code assumes that 'A' is 65 and so on.

  o Minor bugfixes (directory authorities):
    - Correct the implementation of "download votes by digest."  Bugfix on
      0.2.0.8-alpha.
    - Make the "next period" votes into "current period" votes immediately
      after publishing the consensus; avoid a heisenbug that made them stick
      around indefinitely.
    - When we discard a vote as a duplicate, do not report this as an error.
    - Correctly check for bad options to the "PublishServerDescriptor"
      config option. Bugfix on 0.2.0.1-alpha; reported by Matt Edman.
    - When we discard a vote as a duplicate, do not report this as an error.
    - When we're configured to be a v3 authority, but we're only listed